# protoduneana

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
fcl/: CMakeLists.txt
fcl/hd/: pdhd_ana_MC_nosce.fcl  pdhd_ana_MC_sce.fcl  pdhdana_MC_nosce.fcl  pdhdana_MC_sce.fcl
fcl/singlephase/Analysis/: pdhd_ana_MC_nosce.fcl  pdhd_ana_MC_sce.fcl  pduneana_Prod4_data_AltSCE_reco2_1GeV.fcl  pduneana_Prod4_data_reco1_reco2_1GeV_AltSCECorr.fcl  pduneana_Prod4_data_reco2.fcl  pduneana_Prod4_data_reco2_1GeV.fcl  pduneana_Prod4_data_reco2_2GeV.fcl  pduneana_Prod4_data_reco2_3GeV.fcl  pduneana_Prod4_data_reco2_6GeV.fcl  pduneana_Prod4a_MC_altsce.fcl  pduneana_Prod4a_MC_nosce.fcl  pduneana_Prod4a_MC_nosce_0.3GeV.fcl  pduneana_Prod4a_MC_nosce_0.5GeV.fcl  pduneana_Prod4a_MC_nosce_2GeV.fcl  pduneana_Prod4a_MC_nosce_3GeV.fcl  pduneana_Prod4a_MC_nosce_6GeV.fcl  pduneana_Prod4a_MC_nosce_7GeV.fcl  pduneana_Prod4a_MC_sce.fcl  pduneana_Prod4a_MC_sce_0.3GeV.fcl  pduneana_Prod4a_MC_sce_0.5GeV.fcl  pduneana_Prod4a_MC_sce_2GeV.fcl  pduneana_Prod4a_MC_sce_3GeV.fcl  pduneana_Prod4a_MC_sce_6GeV.fcl  (+2 more)
protoduneana/: CMakeLists.txt
protoduneana/DataDump/: CMakeLists.txt  RawWaveformDump_module.cc  pdwire_mc.fcl  pdwire_pdhd_mc.fcl
protoduneana/DataDump/hdf/: CMakeLists.txt  DataDumpHDF_module.cc  pddatadump_hdf.fcl  pdhd_datadump_hdf.fcl
protoduneana/EventGenerator/: CMakeLists.txt  ProtoDUNEBeamTPCMatching_module.cc
protoduneana/ImageMaker/: BookNtuple.h  CMakeLists.txt  ImageMaker.h  NtuplePiMu_tool.cc  SaveImageH5_module.cc  SavePiMu_tool.cc  makepimuh5.fcl
protoduneana/PhysicsWeek/: CMakeLists.txt  MichelEventSelection_module.cc  VtxScore_module.cc
protoduneana/TutorialExamples/: CMakeLists.txt  ReadBeamInfo_module.cc
protoduneana/TutorialExamples/MoreExamples/: BackTracker1_module.cc  CMakeLists.txt  README.md  runbacktracker1.fcl
protoduneana/Utilities/: AbsCexReweighter.cc  AbsCexReweighter.hh  CMakeLists.txt  ECalibration_module.cc  EdepCal_module.cc  G4RWExampleAnalyzer.fcl  G4RWExampleAnalyzer_module.cc  G4ReweightUtils.cxx  G4ReweightUtils.h  HadCal_module.cc  ProtoDUNEAnalCosmicTree_module.cc  ProtoDUNEAnalTree_module.cc  ProtoDUNEAnalysisTree_module.cc  ProtoDUNEBeamCuts.cxx  ProtoDUNEBeamTPCRecoEfficiency_module.cc  ProtoDUNEBeamlineUtils.cxx  ProtoDUNEBeamlineUtils.h  ProtoDUNECalibration.cxx  ProtoDUNECalibration.h  ProtoDUNEDPAnalCosmicTree_module.cc  ProtoDUNEDPCRPGeo.cxx  ProtoDUNEEmptyEventFinder.cxx  ProtoDUNEEmptyEventFinder.fcl  ProtoDUNEEmptyEventFinder.h  ProtoDUNESliceUtils.cxx  ProtoDUNETrackUtils.cxx  ProtoDUNETrackUtils.h  ProtoDUNETruthBeamFilter_module.cc  ProtoDUNETruthBeamParticle_module.cc  ProtoDUNETruthUtils.cxx  ProtoFlash_module.cc  RecoEff_module.cc  SaveSpacePoints_module.cc  g4rw_job.fcl
protoduneana/Utilities/BeamExample/: BeamExample_module.cc  CMakeLists.txt
protoduneana/Utilities/FitUtils/: 2GeVEventSelection.fcl  AbsCexDriver.cxx  AbsCexDriver.h  AltSCEEventSelection.fcl  CMakeLists.txt  EventSelection.fcl  FakeDataSettings.fcl  FitSystematics.fcl  Geant4ReweightSysts.cc  MCToyGenerationAndFit.cxx  PDSPSystematics.cxx  PDSPSystematics.h  PDSPThinSliceFitter.cxx  PDSPThinSliceFitter.h  ProtoDUNEFit.cxx  SelectionDefinitions.h  SelectionVarSysts.fcl  ThinSliceDataSet.cxx  ThinSliceDataSet.h  ThinSliceDriver.cxx  ThinSliceDriver.h  ThinSliceEvent.h  ThinSliceSample.cxx  ThinSliceSample.h  ThinSliceSystematic.h  data_fit.fcl  fit_results.py  get_beam_shift_results.py  runEventSelection.cc  runPDSPThinSliceFit.c++  thin_slice_fit.fcl  xsec_results.py
protoduneana/Utilities/FitUtils/FitObjs/: CMakeLists.txt  classes.h  classes_def.xml
protoduneana/Utilities/FitUtils/fcl_cfg_files/: CMakeLists.txt  asimov.cfg  beam_down_data_fit.fcl  beam_up_data_fit.fcl  cal_down_data_fit.fcl  cal_up_data_fit.fcl  g4rw_fake_data.fcl  only_ediv.fcl  only_g4rwpihigh.fcl  only_g4rwpilow.fcl  only_g4rwprot.fcl  only_match.fcl  only_notrack.fcl  pi0_angle_var.fcl  pi0_gaus.fcl  piplus_angle_var.fcl  proton_angle_var.fcl  standard_data_fit.fcl  standard_data_fit_nobb.fcl  standard_data_fit_throws_0_33.fcl  standard_data_fit_throws_34.fcl  standard_data_fit_throws_35.fcl  standard_data_fit_throws_36.fcl  standard_data_fit_throws_37.fcl  standard_data_fit_throws_38.fcl  standard_data_fit_throws_39.fcl  standard_data_fit_throws_40.fcl  standard_data_fit_throws_41_113.fcl  submit_fits.py  submit_fits_local.py  toy_mcstatvar.fcl  toy_nobb.fcl
protoduneana/dualphase/: CMakeLists.txt
protoduneana/singlephase/: CMakeLists.txt  evd3apa.py
protoduneana/singlephase/michelremoving/: CMakeLists.txt  README.md  michelremoving_module.cc  michelremoving_reruncali.fcl  michelremoving_reruncali_data.fcl  michelremoving_reruncali_mc.fcl  michelremoving_reruncali_mcnosce.fcl
protoduneana/singlephase/michelremoving/Xcalo/: CMakeLists.txt  make_x_corrections_tree.py  measLifeOverRuns_Calib.py  plotXCaloLifetime.C  plotXCaloLifetimeAlt.C  protoDUNEStyle.C  protoDUNE_X_calib.C  protoDUNE_X_calib.h  protoDUNE_X_calibAlt.C  protoDUNE_X_calibAlt.h  protoDUNE_validate_calib.C  runLifetimeMeasurementWrapper.py
protoduneana/singlephase/michelremoving/YZcalo/: CMakeLists.txt  filter_hits_for_correction.py  make_yz.cfg  make_yz_corrections_tree.py  protoDUNE_YZ_calib.C
protoduneana/singlephase/michelremoving/dEdX/: CMakeLists.txt  ProtoDUNEdEdXFitter.cxx  ProtoDUNEdEdXFitter.h  correct_hits.py  dEdX_fit.fcl  filter_all.cfg  filter_hits.py  filter_hits_all.py  get_ccal.py  protoDUNE_dEdx_calib.C  protoDUNE_dEdx_calib.h  runProtoDUNEdEdXFit.c++
protoduneana/singlephase/michelremoving/scripts/: CMakeLists.txt  CaloUtils.cxx  CaloUtils.h  ConvertXCorrection.C  ConvertYZCorrection.C  LanGausFit.C  LanGausFit.h  calconst.C  countdefevents.sh  filelisting.py  fitlangaumpv.C  make_norm_csv.py  make_x_csv.py  make_yz_csv.py  mpv.C  murecombfit.C  plotmurecombfitresult.C  protoDUNE_validate_calib.C  protoDUNE_validate_calib.h  resrangefit.C  resrangefit.c  rundqdxcalib_data.sh  rundqdxcalib_mc.sh  write_to_db_pdsp.py
protoduneana/verticaldrift/: CMakeLists.txt
ups/: product_deps
(+138 files in other folders)
