
art_make( LIBRARY_NAME ProtoDUNEUtilities
	  LIB_LIBRARIES
                        dunecore::ArtSupport
                        lardataobj::RawData
                        lardataobj::RecoBase
                        larreco::RecoAlg
                        larreco::Calorimetry
                        larreco::RecoAlg_PMAlg
                        larcorealg::Geometry
                        larcore::Geometry_Geometry_service
                        lardataalg::DetectorInfo
                        lardata::ArtDataHelper
                        lardata::Utilities
                        larsim::Simulation 
                        lardataobj::Simulation
                        duneprototypes::ProtoDUNEDataUtils
                        geant4reweight::ReweightBaseLib
                        geant4reweight::PropBaseLib
                        dunecore::DuneObj
                        dune_raw_data::dune-raw-data_Services_ChannelMap_PdspChannelMapService_service
                        larsim::MCCheater_PhotonBackTrackerService_service
                        larsim::MCCheater_BackTrackerService_service
                        larsim::MCCheater_ParticleInventoryService_service
                        nug4::ParticleNavigation 
                        nusimdata::SimulationBase
                        CLHEP
                        ART_FRAMEWORK_CORE
                        ART_FRAMEWORK_PRINCIPAL
                        ART_FRAMEWORK_SERVICES_REGISTRY
                        ART_ROOT_IO_TFILE_SUPPORT
			ROOT::Core
                        ART_ROOT_IO_TFILESERVICE_SERVICE
                        art::Persistency_Common 
                        art::Persistency_Provenance
                        art::Utilities 
			canvas
                        messagefacility::MF_MessageLogger
                        fhiclcpp::fhiclcpp
                        cetlib
			cetlib_except
                        ROOT_BASIC_LIB_LIST
	  MODULE_LIBRARIES
          ProtoDUNEUtilities
)

install_headers()
install_fhicl()
install_source()
install_scripts()

add_subdirectory(FitUtils)
