art_make( 
  LIB_LIBRARIES 
  lardataobj::RecoBase
  larana::OpticalDetector_OpHitFinder
  larsim::MCSTReco
  lardataobj::MCBase
  larcorealg::Geometry
  larcore::Geometry_Geometry_service
  larsim::PhotonPropagation_PhotonVisibilityService_service
  larana::OpticalDetector_OpDigiProperties_service
  lardata::Utilities
  nusimdata::SimulationBase
  ART_FRAMEWORK_CORE
  ART_FRAMEWORK_PRINCIPAL
  ART_FRAMEWORK_SERVICES_REGISTRY
  ART_ROOT_IO_TFILE_SUPPORT
  ROOT::Core
  ART_ROOT_IO_TFILESERVICE_SERVICE
  ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE
  art::Persistency_Common
  art::Persistency_Provenance
  art::Utilities
  canvas
  messagefacility::MF_MessageLogger
  fhiclcpp
  cetlib cetlib_except
  ROOT_BASIC_LIB_LIST
  MODULE_LIBRARIES larana::OpticalDetector_OpDigiProperties_service
  larana::OpticalDetector_OpHitFinder
  larana::OpticalDetector
  larsim::PhotonPropagation_PhotonVisibilityService_service
  larsim::MCCheater_BackTrackerService_service
  larsim::MCCheater_ParticleInventoryService_service
  larevt::Filters
  lardata::RecoObjects
  lardataobj::RecoBase
  lardataobj::MCBase
  larreco::RecoAlg
  larcorealg::Geometry
  larcore::Geometry_Geometry_service
  larsim::Simulation 
  nug4::ParticleNavigation 
  lardataobj::Simulation
  lardata::Utilities
  lardataobj::RawData
  larreco::Calorimetry
  lardataobj::AnalysisBase
  nurandom::RandomUtils_NuRandomService_service
  nusimdata::SimulationBase
  ART_FRAMEWORK_CORE
  ART_FRAMEWORK_PRINCIPAL
  ART_FRAMEWORK_SERVICES_REGISTRY
  ART_ROOT_IO_TFILE_SUPPORT
  ROOT::Core
  ART_ROOT_IO_TFILESERVICE_SERVICE
  ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE
  art::Persistency_Common
  art::Persistency_Provenance
  art::Utilities
  canvas
  messagefacility::MF_MessageLogger
  fhiclcpp
  cetlib 
  cetlib_except
  ROOT_BASIC_LIB_LIST
  ProtoDUNEUtilities
  SERVICE_LIBRARIES
  larcorealg::Geometry
  larcore::Geometry_Geometry_service
  ART_FRAMEWORK_CORE
  ART_FRAMEWORK_PRINCIPAL
  ART_FRAMEWORK_SERVICES_REGISTRY
  ART_ROOT_IO_TFILE_SUPPORT
  ROOT::Core
  ART_ROOT_IO_TFILESERVICE_SERVICE
  art::Persistency_Common
  art::Persistency_Provenance	
  art::Utilities
  canvas
  messagefacility::MF_MessageLogger
  fhiclcpp
  cetlib 
  cetlib_except
  CLHEP
  ROOT_BASIC_LIB_LIST
  )

cet_remove_compiler_flags(CXX -pedantic)

install_headers()
install_fhicl()
install_source()
install_scripts()

#install_fw( LIST toyWaveform.txt)
add_subdirectory(Xcalo)
add_subdirectory(YZcalo)
add_subdirectory(dEdX)
add_subdirectory(scripts)
#add_subdirectory(Xcalo_cathodeanode)
